fix: aligned items to center in hero container

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ img {
 .header-container, .hero-container, footer{
     background-color: #1F2937;
     justify-content: space-between;
+    align-items: center;
 }
 
 a {
